test/corpus/document.txt
===
doc.empty | Empty document parses correctly
===
---
(document)

===
doc.top1 | Document with top-level quoted string values parses correctly
===
"key" "value"
---
(document
    (record_entry
        key:    (quoted_string)
        value:  (quoted_string)))

===
doc.top2 | Document with top-level list values parses correctly
===
"list_empty"    [],
"list_one"      ["s"],
"nested_list"   [[]],
---
(document
    (record_entry
        key:    (quoted_string)
        value:  (list))
    (record_entry
        key:    (quoted_string)
        value:  (list (quoted_string)))
    (record_entry
        key:    (quoted_string)
        value:  (list (list))))
